# Paw-Agent

./: .gitignore  README.md  paw-agent.ps1  paw.cmd  pyproject.toml  run_paw.py
paw_agent/: agent.py  cli.py  config.py  llama_client.py  memory.py  presets.py  tools.py  vector_store.py
tests/: test_agent_vector_context.py  test_config.py  test_memory.py  test_tools.py  test_vector_store.py
